# org-linkz

./: .gitignore  Linkz.org
js/: main.js
rust/: .gitignore  Cargo.toml  build-workflow.sh  info.plist  org-linkz.alfredworkflow
rust/src/: main.rs  output.rs  parser.rs  searcher.rs
